Bug 1420496: Bring back the optimization to avoid traversing XBL subtrees that will likely change. r=heycam

We need to get rid of BindingHolder to handle properly the case of an invalid
binding URL.

MozReview-Commit-ID: 3sIGtcVOt0r